--- a/config/splat.dra.yaml
+++ b/config/splat.dra.yaml
@@ -39,6 +39,8 @@ segments:
       - [0x3B7A0, rodata]
       - [0x3BF10, rodata]
       - [0x3C160, rodata]
+      - [0x3CBC4, .rodata, 42398]
+      - [0x3CBDC]
       - [0x3CC80, rodata]
       - [0x3CD00, rodata]
       - [0x3CD10, rodata]
