--- a/config/splat.us.stwrp.yaml
+++ b/config/splat.us.stwrp.yaml
@@ -82,7 +82,7 @@ segments:
       - [0x6F80, rodata] # EntityUnkId0E
       - [0x6F94, rodata] # EntityStageNamePopup
       - [0x6FD0, c]
-      - [0x81E8, c]
+      - [0x81E8, c, ../shared]
       - [0x861C, c]
       - [0xD020, c]
       - [0x13AA0, sbss] # bss?
