--- a/config/splat.us.dra.yaml
+++ b/config/splat.us.dra.yaml
@@ -198,6 +198,8 @@ segments:
       - [0x94F50, c, 94F50]
       - [0x953A0, c, 953A0]
       - [0x962AC, sbss]
+      - [0x98454, sbss] # sound bss
+      - [0x9B69C, .sbss, 8D3E8] # D_8013B69C
   - name: dra_data
     type: data
     start: 0x9B6A0
